added amount masking
